<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:gravity="center_horizontal"
    android:orientation="vertical">

    <org.tensorflow.demo.view.kbv.KenBurnsView
        android:id="@+id/background_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- We use dps for font size: we don't want our logo
    to become larger if user has set larger text in global
    settings. -->

	<ImageView
		android:id="@+id/logo"
		android:src="@drawable/logo"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:layout_gravity="center"/>
    <org.tensorflow.demo.font.RobotoTextView
        android:id="@+id/welcome_text"
        style="@style/TextViewAppearance.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0.0"
        android:text="@string/welcome"
        android:textColor="@android:color/white" />
	
	<!--zone texte-->
    <Button
        android:id="@+id/btnBlind"
		android:layout_below="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginLeft="56dp"
		android:layout_marginRight="56dp"
		android:layout_marginTop="32dp"
		android:layout_centerHorizontal="true"
        android:background="@drawable/btn_with_rounded_corners"
        android:text="@string/blind_btn"
        android:contentDescription="@string/blind_btn"/>

	<Button
		android:id="@+id/btnVolunteer"
		android:layout_below="@+id/btnBlind"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginLeft="56dp"
		android:layout_marginRight="56dp"
		android:layout_centerHorizontal="true"
		android:background="@drawable/btn_with_rounded_corners"
		android:text="@string/volunteer_btn"
		android:contentDescription="@string/volunteer_btn"/>

</RelativeLayout>