<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" >

        <ImageView
            android:id="@+id/fragment_about_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fragment_social_background_image"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cc6bef29" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical" >

            <org.tensorflow.demo.font.RobotoTextView
                android:id="@+id/fragment_about_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="Angel Eyes"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:typeface="robotoLight" />

            <org.tensorflow.demo.font.RobotoTextView
                android:id="@+id/fragment_tab_about_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:maxLines="10"
                android:text="@string/about_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:typeface="robotoRegular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center" >

                <org.tensorflow.demo.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_about_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_like"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />

                <org.tensorflow.demo.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_about_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_favorite"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />

                <org.tensorflow.demo.font.MaterialDesignIconsTextView
                    android:id="@+id/fragment_tab_about_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_share"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>