<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="40dp">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <org.tensorflow.demo.font.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:typeface="robotoLight" />

        <EditText
            android:id="@+id/login_page_social_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:backgroundTintMode="@android:color/transparent"
            android:cursorVisible="true"
            android:drawableBottom="@android:color/transparent"
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="25sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <org.tensorflow.demo.font.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:typeface="robotoLight" />

        <EditText
            android:id="@+id/login_page_social_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:backgroundTintMode="@android:color/transparent"
            android:drawableBottom="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textNoSuggestions"
            android:password="true"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />
			
		<Button
			android:id="@+id/sign_in"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
			android:background="@drawable/btn_with_rounded_corners"
			android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="right" 
		android:orientation="vertical">

        <org.tensorflow.demo.font.RobotoTextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/transparent_button_selector"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:typeface="robotoMedium" />
    </LinearLayout>

</LinearLayout>